--- a/index.html
+++ b/index.html
@@ -17,64 +17,96 @@
 
   <main>
 
+    <div>
+      <img src="assets/images/image-omelette.jpeg" alt="image-omelette" class="main-image">
+    </div>
+
     <h1>
       Simple Omelette Recipe
     </h1>
 
-    <article>
+    <section>
       <p>
         An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked
         to perfection, optionally filled with your choice of cheese, vegetables, or meats.
       </p>
-    </article>
+    </section>
 
-    <article>
+    <section>
       <h2>
         Preparation time
       </h2>
 
       <ul>
-        <li>Total: Approximately 10 minutes</li>
-        <li>Preparation: 5 minutes</li>
-        <li>Cooking: 5 minutes</li>
+        <li>
+          <p>Total: Approximately 10 minutes</p>
+        </li>
+        <li>
+          <p>Preparation: 5 minutes</p>
+        </li>
+        <li>
+          <p>Cooking: 5 minutes</p>
+        </li>
       </ul>
-    </article>
+    </section>
 
-    <article>
+    <section>
       <h2>
         Ingredients
       </h2>
 
       <ul>
-        <li>2-3 large eggs</li>
-        <li>Salt, to taste</li>
-        <li>Pepper, to taste</li>
-        <li>1 tablespoon of butter or oil</li>
-        <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+        <li>
+          <p>2-3 large eggs</p>
+        </li>
+        <li>
+          <p>Salt, to taste</p>
+        </li>
+        <li>
+          <p>Pepper, to taste</p>
+        </li>
+        <li>
+          <p>1 tablespoon of butter or oil</p>
+        </li>
+        <li>
+          <p>Optional fillings: cheese, diced vegetables, cooked meats, herbs</p>
+        </li>
       </ul>
 
-    </article>
+    </section>
 
-    <article>
+    <section>
       <h2>
         Instructions
       </h2>
 
       <ol>
-        <li>Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed.
-          You can add a tablespoon of water or milk for a fluffier texture.</li>
-        <li>Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.</li>
-        <li> Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure
-          the eggs evenly coat the surface.</li>
-        <li>Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the
-          middle, sprinkle your chosen fillings over one half of the omelette.</li>
-        <li> Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the
-          fillings. Let it cook for another minute, then slide it onto a plate.</li>
-        <li> Enjoy: Serve hot, with additional salt and pepper if needed.</li>
+        <li>
+          <p>Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed.
+            You can add a tablespoon of water or milk for a fluffier texture.</p>
+        </li>
+        <li>
+          <p>Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.</p>
+        </li>
+        <li>
+          <p>Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure
+            the eggs evenly coat the surface.</p>
+        </li>
+        <li>
+          <p>Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the
+            middle, sprinkle your chosen fillings over one half of the omelette.</p>
+        </li>
+        <li>
+          <p>Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the
+            fillings. Let it cook for another minute, then slide it onto a plate.</p>
+        </li>
+        <li>
+          <p>Enjoy: Serve hot, with additional salt and pepper if needed.</p>
+        </li>
       </ol>
-    </article>
+    </section>
 
-    <article>
+    <section>
       <h2>
         Nutrition
       </h2>
@@ -83,23 +115,39 @@
 
       <table>
         <tr>
-          <th>Calories</th>
-          <th>277kcal</th>
+          <th>
+            <p>Calories</p>
+          </th>
+          <th>
+            <p>277kcal</p>
+          </th>
         </tr>
         <tr>
-          <th>Carbs</th>
-          <th>0g</th>
+          <th>
+            <p>Carbs</p>
+          </th>
+          <th>
+            <p>0g</p>
+          </th>
         </tr>
         <tr>
-          <th>Protein</th>
-          <th>20g</th>
+          <th>
+            <p>Protein</p>
+          </th>
+          <th>
+            <p>20g</p>
+          </th>
         </tr>
         <tr>
-          <th>Fat</th>
-          <th>22g</th>
+          <th>
+            <p>Fat</p>
+          </th>
+          <th>
+            <p>22g</p>
+          </th>
         </tr>
       </table>
-    </article>
+    </section>
 
 
   </main>
