Updated index.html and style.css

--- a/index.html
+++ b/index.html
@@ -32,25 +32,25 @@
       </p>
     </section>
 
-    <section>
+    <section class="preparation-time">
       <h2>
-        Preparation time
+        <p>Preparation time</p>
       </h2>
 
       <ul>
         <li>
-          <p>Total: Approximately 10 minutes</p>
+          <p><span>Total:</span> Approximately 10 minutes</p>
         </li>
         <li>
-          <p>Preparation: 5 minutes</p>
+          <p><span>Preparation:</span> 5 minutes</p>
         </li>
         <li>
-          <p>Cooking: 5 minutes</p>
+          <p><span>Cooking:</span> 5 minutes</p>
         </li>
       </ul>
     </section>
 
-    <section>
+    <section class="ingredients">
       <h2>
         Ingredients
       </h2>
@@ -75,7 +75,7 @@
 
     </section>
 
-    <section>
+    <section class="instructions">
       <h2>
         Instructions
       </h2>
@@ -106,7 +106,7 @@
       </ol>
     </section>
 
-    <section>
+    <section class="nutrition">
       <h2>
         Nutrition
       </h2>
